# ClonoDoc

./: 01_DESIGN.md  04_NAMING.md  05_IMPLEMENTATION_PLAN.md  Cargo.toml  README.md  example_library.json5
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs  theme.rs  viz.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: align.rs  assemble.rs  coverage.rs  gate1.rs  gate2.rs  lib.rs  model.rs  naming.rs  report.rs  seq.rs  verdict.rs  workflow.rs
crates/core/src/seqio/: ab1.rs  fasta.rs  genbank.rs  mod.rs  tabular.rs
crates/core/tests/: golden.rs
design/: Cloning Workbench - A.dc.html  README.md
docs/: 02_CONFIG_SCHEMA.md  03_ARCHITECTURE.md
reference/: example_library.json5  verified_facts.md
test_data/: IDT_order_correct.xlsx  IDT_ordered_sequences_correct.fasta  IgG1_heavy_chain_french_vector.gb
