# ClonoDoc — antibody cloning verifier
# Cargo workspace: a headless verification engine (core), a CLI, and an egui GUI.
[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Benjamin <bnemoz@scripps.edu>"]
license = "MIT"
repository = "https://github.com/bnemoz/ClonoDoc"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
calamine = "0.26"
csv = "1"
sha2 = "0.10"
thiserror = "1"
anyhow = "1"
rayon = "1"
directories = "5"

# Build the whole workspace with optimizations off by default for fast iteration,
# but keep release lean and fast.
[profile.release]
opt-level = 3
lto = "thin"
strip = true
