[package]
name = "abclone-app"
description = "egui desktop GUI for abclone-verify."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "abclone-verify"
path = "src/main.rs"

[dependencies]
abclone-core = { path = "../core" }
anyhow.workspace = true
eframe = "0.31"
egui = "0.31"
rfd = "0.15"
