[package]
name = "clonodoc-app"
description = "egui desktop GUI for clonodoc."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "clonodoc"
path = "src/main.rs"

[dependencies]
clonodoc-core = { path = "../core" }
anyhow.workspace = true
eframe = "0.31"
egui = "0.31"
rfd = "0.15"
