[package]
name = "clonodoc-app"
description = "egui desktop GUI for ClonoDoc."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "clonodoc"
path = "src/main.rs"

[dependencies]
clonodoc-core = { path = "../core" }
anyhow.workspace = true
eframe = "0.31"
egui = "0.31"
rfd = "0.15"

# Embed Windows version/publisher metadata into the .exe so it shows a proper
# product name instead of a blank "Unknown publisher" (does not replace signing).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
