[package]
name = "abclone-cli"
description = "Headless command-line runner for abclone-verify (Gate 1 / Gate 2)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "abclone-cli"
path = "src/main.rs"

[dependencies]
abclone-core = { path = "../core" }
anyhow.workspace = true
