[package]
name = "clonodoc-cli"
description = "Headless command-line runner for clonodoc (Gate 1 / Gate 2)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "clonodoc-cli"
path = "src/main.rs"

[dependencies]
clonodoc-core = { path = "../core" }
anyhow.workspace = true
